# ml-hub-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.MD  CONTRIBUTORS.md  Cargo.toml  LICENSE.md  README.md  components.json  manage  manage.py  test.json
src/apis/datasets/: .dockerignore  Cargo.toml  Dockerfile.gh-actions  Dockerfile.local  rustfmt.toml
src/apis/datasets/deploy/local/minikube/: deployment.yaml  service.yaml
src/apis/datasets/scripts/: burndown.sh  burnup.sh
src/apis/datasets/src/: config.rs  main.rs
src/apis/datasets/src/operations/: download_dataset.rs  get_dataset.rs  health_check.rs  list_datasets.rs
src/apis/inference/: Cargo.toml  Dockerfile.local
src/apis/inference/deploy/local/minikube/: deployment.yaml  service.yaml
src/apis/inference/examples/: inference_server.yml  inference_server_deployment.yml  inference_server_deployment_icicle_ultralytics.yml  inference_server_icicle_ultralytics_api.yml
src/apis/inference/src/: database.rs  lib.rs  main.rs  state.rs
src/apis/inference/src/application/: inputs.rs  mod.rs  repositories.rs
src/apis/inference/src/application/services/: inference_server_service.rs  mod.rs
src/apis/inference/src/bootstrap/: factories.rs  mod.rs
src/apis/inference/src/bootstrap/web_servers/: actix_web.rs  mod.rs
src/apis/inference/src/domain/: entities.rs  repositories.rs
src/apis/inference/src/infra/: mod.rs
src/apis/inference/src/infra/mongo/: document_to_domain.rs  documents.rs  domain_to_document.rs  entities.rs  mod.rs  repositories.rs
src/apis/inference/src/operations/: create_inference_server.rs  get_inference_server.rs  get_inference_server_deployment.rs  get_inference_server_docs.rs  list_inference_server_deployments.rs  list_inferences.rs
src/apis/inference/src/presentation/: dto.rs  helpers.rs  mod.rs
src/apis/inference/src/presentation/handlers/: create_inference_server.rs  delete_inference_server.rs  get_inference_server_deployment.rs  get_inference_server_docs.rs  list_inference_server_deployments.rs  list_inference_servers.rs
src/apis/inference/src/repositories/: inference_server_repository.rs
src/apis/inference/src/web/: dto.rs  helpers.rs
src/apis/inference/src/web/handlers/: create_inference_server.rs  get_inference_server_deployment.rs  get_inference_server_docs.rs  list_inference_server_interfaces.rs  list_inference_servers.rs  mod.rs  update_inference_server.rs
src/apis/inference/src/web/operations/: get_inference_server_deployment.rs  get_inference_server_docs.rs  list_inference_servers.rs  update_inference_server.rs
src/apis/models/: .dockerignore  Cargo.toml  Dockerfile.gh-actions  Dockerfile.local  inference_server.yml  inference_server_icicle_ultralytics_api.yml
src/apis/models/deploy/local/docker/: docker-compose.yaml
src/apis/models/deploy/local/minikube/: deployment.yaml  deployment.yaml.bak
src/apis/models/docs/examples/: model_metadata_1.json  model_metadata_2.json  model_metadata_2.yaml
src/apis/models/scripts/: burndown.sh  burnup.sh
src/apis/models/src/: config.rs  helpers.rs  lib.rs  main.rs
src/apis/models/src/application/: errors.rs  inputs.rs  mod.rs
src/apis/models/src/application/ports/: messaging.rs  mod.rs  repositories.rs
src/apis/models/src/application/services/: artifact_service.rs
src/apis/models/src/bootstrap/: factories.rs
src/apis/models/src/domain/: mod.rs  services.rs
src/apis/models/src/domain/entities/: artifact.rs  artifact_ingestion.rs  timestamp.rs
src/apis/models/src/infra/: mod.rs
src/apis/models/src/infra/persistence/: errors.rs  mod.rs
src/apis/models/src/operations/: discover_models.rs  download_model.rs  get_model.rs  health_check.rs  index.rs  list_models.rs  publish_model.rs
src/apis/models/tests/: get_model_test.rs
src/components/artifact-ingester/: Cargo.toml  Dockerfile.gh-actions  Dockerfile.local
src/components/artifact-ingester/deploy/local/minikube/: deployment.yaml  deployment.yml
src/components/artifact-ingester/scripts/: burnup.sh
src/components/artifact-ingester/src/: bootstrap.rs  database.rs  lib.rs  main.rs  messages.rs
src/libs/client-provider/: Cargo.toml
src/libs/client-provider/src/: clients.rs  errors.rs  lib.rs  platform.rs  provider.rs
src/libs/clients/: Cargo.toml
src/libs/clients/src/: artifacts.rs  clients.rs  errors.rs  lib.rs  platform.rs  provider.rs  registrar.rs  registrars.rs  responses.rs
src/libs/github-lfs-client/: Cargo.toml
src/libs/github-lfs-client/src/: client.rs
src/libs/huggingface-client/: Cargo.toml  rustfmt.toml
src/libs/huggingface-client/src/: client.rs  constants.rs  lib.rs  requests.rs  utils.rs
src/libs/patra-client/: Cargo.toml
src/libs/patra-client/src/: client.rs  lib.rs  utils.rs
src/libs/shared/: Cargo.toml
src/libs/shared/src/: archive.rs  artifacts.rs  clients.rs  constants.rs  debug.rs  errors.rs  filtering.rs  git.rs  inference.rs  lib.rs  logging.rs  requests.rs  responses.rs  retry.rs  retry.test.rs  system.rs  utils.rs  wrappers.rs
src/libs/shared/src/application/: errors.rs  inputs_to_domain.rs  mod.rs
src/libs/shared/src/application/inputs/: mod.rs
src/libs/shared/src/application/ports/: events.rs  messaging.rs  mod.rs  repositories.rs
src/libs/shared/src/application/services/: artifact_service.rs  mod.rs  model_metadata_service.rs
src/libs/shared/src/clients/: artifacts.rs  mod.rs  responses.rs
src/libs/shared/src/common/: mod.rs
src/libs/shared/src/common/application/: errors.rs  inputs.rs  inputs_to_domain.rs
src/libs/shared/src/common/domain/: services.rs
src/libs/shared/src/common/infra/: mod.rs  system.rs
src/libs/shared/src/datasets/web/: dto.rs
src/libs/shared/src/domain/: inference.rs  models.rs  services.rs
src/libs/shared/src/domain/entities/: artifact.rs  artifact.test.rs  artifact_ingestion.rs  artifact_ingestion.test.rs  artifact_publication.rs  inference.rs  mod.rs  (+5 more)
src/libs/shared/src/infra/: mod.rs  system.rs
src/libs/shared/src/models/: mod.rs
src/libs/tacc-tapis-client/: Cargo.toml
src/libs/tacc-tapis-client/src/: client.rs  lib.rs  operations.rs  tokens.rs  utils.rs
(+294 files in other folders)
