[package]
name = "datasets"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
schemars = { package = "apistos-schemars", version = "0.8" }
apistos = "0.4"
env_logger = "0.11.5"
log = "0.4"
shared = { version = "0.1.0", path = "../../libs/shared" }
huggingface-client = { version = "0.1.0", path = "../../libs/huggingface-client" }
serde_json = "1.0.137"
clients = { version = "0.1.0", path = "../../libs/clients" }
