[package]
name = "inference"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
schemars = { package = "apistos-schemars", version = "0.8" }
shared = { version = "0.1.0", path = "../../libs/shared" }
clients = { version = "0.1.0", path = "../../libs/clients" }
apistos = "0.4"
env_logger = "0.11.5"
log = "0.4"
mongodb = "2.8"
serde_yaml = "0.9.34"
futures = "0.3.31"
serde_json = "1.0.140"
openapiv3 = "2.0.0"
