[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
huggingface-client = { path = "../../libs/huggingface-client" }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
schemars = { package = "apistos-schemars", version = "0.8" }
apistos = "0.4"
env_logger = "0.11.5"
serde_json = "1.0.135"
shared = { version = "0.1.0", path = "../../libs/shared" }
clients = { version = "0.1.0", path = "../../libs/clients" }
actix-files = "0.6.6"
actix-multipart = "0.7.2"
