[package]
name = "models"
version = "0.1.0"
edition = "2021"

[features]
default = ["actix"]
actix = ["actix-web", "actix-multipart", "actix-files"]

[dependencies]
huggingface-client = { path = "../../libs/huggingface-client" }
serde = { version = "1.0", features = ["derive"] }
actix-multipart = {version = "0.7.2", optional = true}
actix-web = {version = "4", optional = true}
actix-files = {version = "0.6.6", optional = true}
utoipa = { version = "4" }
utoipa-swagger-ui = "5"
env_logger = "0.11.5"
serde_json = "1.0.135"
shared = { version = "0.1.0", path = "../../libs/shared" }
client-provider = { version = "0.1.0", path = "../../libs/client-provider" }
bytes = "1.10.1"
