[package]
name = "models"
version = "0.1.0"
edition = "2021"

[features]
default = ["actix", "mongo"]
actix = ["actix-web", "actix-multipart", "actix-files"]
mongo = []

[dependencies]
huggingface-client = { path = "../../libs/huggingface-client" }
serde = { version = "1.0", features = ["derive"] }
actix-multipart = {version = "0.7.2", optional = true}
actix-web = {version = "4", optional = true}
actix-files = {version = "0.6.6", optional = true}
utoipa = { version = "4" }
utoipa-swagger-ui = "5"
env_logger = "0.11.5"
serde_json = "1.0.135"
shared = { version = "0.1.0", path = "../../libs/shared" }
client-provider = { version = "0.1.0", path = "../../libs/client-provider" }
bytes = "1.10.1"
clients = { version = "0.1.0", path = "../../libs/clients" }
uuid = { version = "1.15.1", features = ["v7"] }
thiserror = "2.0.12"
async-trait = "0.1.88"
futures = "0.3.31"
once_cell = "1.21.3"
mongodb = "2.8.2"
