[package]
name = "artifact-ingester"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { version = "0.1.0", path = "../../libs/shared" }
client-provider = { version = "0.1.0", path = "../../libs/client-provider" }
env_logger = "0.11.8"
futures-util = "0.3.31"
lapin = "2.5.3"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.17.0", features = ["v7"] }
serde_json = "1.0.140"
serde = "1.0.219"
