[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4"
futures-util = "0.3"
gix = "0.70.0"
log = "0.4"
openapiv3 = "2.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
strum = "0.27.0"
strum_macros = "0.27.0"
uuid = { version = "1.15.1", features = ["v7"] }
# TODO need to pin to 2.5.0 as 2.6.0 breaks zip-extensions due to its use of
# generics. Check in periodically for a new version of zip-extensions with a fix
# for that issue
zip = "=2.5.0"
zip-extensions = "0.8.1"
