[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
default = ["actix"]
actix = ["actix-web", "actix-multipart"]

[dependencies]
actix-multipart = {version = "0.7.2", optional = true}
actix-web = {version = "4", optional = true}
bytes = "1.10.1"
futures-util = "0.3"
gix = "0.70.0"
log = "0.4"
openapiv3 = "2.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
strum = "0.27.0"
strum_macros = "0.27.0"
thiserror = "2.0.12"
uuid = { version = "1.15.1", features = ["v7"] }
zip = "3.0.0"
