[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
default = ["actix", "mongo"]
actix = ["actix-web", "actix-multipart"]
mongo = ["mongodb"]

[dependencies]
actix-multipart = {version = "0.7.2", optional = true}
actix-web = {version = "4", optional = true}
amqprs = "2.1.1"
async-trait = "0.1.88"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures-util = "0.3"
gix = "0.70.0"
log = "0.4"
once_cell = "1.21.3"
openapiv3 = "2.0.0"
rand = { version = "0.9.1", features = ["thread_rng"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
strum = "0.27.0"
strum_macros = "0.27.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["time"] }
tokio-retry = "0.3.0"
uuid = { version = "1.15.1", features = ["v7", "v4"] }
zip = "3.0.0"
mongodb = {version = "2.8", optional = true}
bson = { version = "2", features = ["chrono-0_4"] }
futures = "0.3.31"
